# ENVI-data-reader-c

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp
inc/: envi-c-handling.h  envi-data-reading.h  envi-hdr-parsing.h  logs.h
src/: envi-data-handling.c  envi-data-reading.c  envi-hdr-parsing.c
